fix presentation ios

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,12 +47,14 @@ video{
         margin-bottom: 5rem;
     }
     video{
-
+        margin-bottom: 1%;
+        padding:0%;
         width:80%;
     }
 
     video:hover{
         width: 80%;
+        padding:0%;
     }
     
 }
